@@ -3,6 +3,7 @@
     * Fixed bug #1265765 with patches from Matthias Larisch and Edgar Soldin
       - SSH Paramiko backend now uses BufferedFile implementation to enable
         collecting the entire list of files on the backend.
+    * Copy.com is gone so remove copycombackend.py.
 
 2017-06-02  Kenneth Loafman  <kenneth@loafman.com>
 
