@@ -35,6 +35,7 @@ New in v0.7.13 (2017/??/??)
 * Fixed bug #1265765 with patches from Matthias Larisch and Edgar Soldin
   - SSH Paramiko backend now uses BufferedFile implementation to enable
     collecting the entire list of files on the backend.
+* Copy.com is gone so remove copycombackend.py.
 
 
 New in v0.7.12 (2017/03/21)
